nekoScriptParser.py
# Generated from nekoScript.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class nekoScriptParser ( Parser ):

    grammarFileName = "nekoScript.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'('", "')'", "';'", "'nek'", "','", 
                     "'nekImporter'", "'neksite.cr\\u00E9er'", "'script'", 
                     "'{'", "'}'", "'contenu'", "':'", "'titre'", "'lang'", 
                     "'couleur-de-fond'", "'style'", "'package'", "'dep'", 
                     "'function'", "'$'", "'neko-script'", "'publish'", 
                     "'librairie'", "'t\\u00E9l\\u00E9charger'", "'nekAppelerJs'", 
                     "'nekAppelerPython'", "'plus'", "'moins'", "'multiplier'", 
                     "'diviser'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "IDENTIFIANT", "STRING", "INT", "COMMENT", "WS" ]

    RULE_script = 0
    RULE_instruction = 1
    RULE_affectation = 2
    RULE_operation = 3
    RULE_appelFonction = 4
    RULE_importation = 5
    RULE_blocSite = 6
    RULE_contenuSite = 7
    RULE_styleInstruction = 8
    RULE_packageDeclaration = 9
    RULE_packageInstruction = 10
    RULE_paramList = 11
    RULE_terminalCommand = 12
    RULE_appelExterne = 13
    RULE_valeur = 14
    RULE_operateur = 15
    RULE_commentaire = 16

    ruleNames =  [ "script", "instruction", "affectation", "operation", 
                   "appelFonction", "importation", "blocSite", "contenuSite", 
                   "styleInstruction", "packageDeclaration", "packageInstruction", 
                   "paramList", "terminalCommand", "appelExterne", "valeur", 
                   "operateur", "commentaire" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    IDENTIFIANT=32
    STRING=33
    INT=34
    COMMENT=35
    WS=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ScriptContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(nekoScriptParser.EOF, 0)

        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nekoScriptParser.InstructionContext)
            else:
                return self.getTypedRuleContext(nekoScriptParser.InstructionContext,i)


        def getRuleIndex(self):
            return nekoScriptParser.RULE_script

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScript" ):
                listener.enterScript(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScript" ):
                listener.exitScript(self)




    def script(self):

        localctx = nekoScriptParser.ScriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_script)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 38858391968) != 0):
                self.state = 34
                self.instruction()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 40
            self.match(nekoScriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def affectation(self):
            return self.getTypedRuleContext(nekoScriptParser.AffectationContext,0)


        def operation(self):
            return self.getTypedRuleContext(nekoScriptParser.OperationContext,0)


        def appelFonction(self):
            return self.getTypedRuleContext(nekoScriptParser.AppelFonctionContext,0)


        def importation(self):
            return self.getTypedRuleContext(nekoScriptParser.ImportationContext,0)


        def blocSite(self):
            return self.getTypedRuleContext(nekoScriptParser.BlocSiteContext,0)


        def packageDeclaration(self):
            return self.getTypedRuleContext(nekoScriptParser.PackageDeclarationContext,0)


        def terminalCommand(self):
            return self.getTypedRuleContext(nekoScriptParser.TerminalCommandContext,0)


        def appelExterne(self):
            return self.getTypedRuleContext(nekoScriptParser.AppelExterneContext,0)


        def commentaire(self):
            return self.getTypedRuleContext(nekoScriptParser.CommentaireContext,0)


        def getRuleIndex(self):
            return nekoScriptParser.RULE_instruction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruction" ):
                listener.enterInstruction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruction" ):
                listener.exitInstruction(self)




    def instruction(self):

        localctx = nekoScriptParser.InstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_instruction)
        try:
            self.state = 51
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.affectation()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 43
                self.operation()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 44
                self.appelFonction()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 45
                self.importation()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 46
                self.blocSite()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 47
                self.packageDeclaration()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 48
                self.terminalCommand()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 49
                self.appelExterne()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 50
                self.commentaire()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AffectationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIANT(self):
            return self.getToken(nekoScriptParser.IDENTIFIANT, 0)

        def valeur(self):
            return self.getTypedRuleContext(nekoScriptParser.ValeurContext,0)


        def getRuleIndex(self):
            return nekoScriptParser.RULE_affectation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAffectation" ):
                listener.enterAffectation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAffectation" ):
                listener.exitAffectation(self)




    def affectation(self):

        localctx = nekoScriptParser.AffectationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_affectation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(nekoScriptParser.IDENTIFIANT)
            self.state = 54
            self.match(nekoScriptParser.T__0)
            self.state = 55
            self.match(nekoScriptParser.T__1)
            self.state = 56
            self.valeur()
            self.state = 57
            self.match(nekoScriptParser.T__2)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 58
                self.match(nekoScriptParser.T__3)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIANT(self):
            return self.getToken(nekoScriptParser.IDENTIFIANT, 0)

        def valeur(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nekoScriptParser.ValeurContext)
            else:
                return self.getTypedRuleContext(nekoScriptParser.ValeurContext,i)


        def operateur(self):
            return self.getTypedRuleContext(nekoScriptParser.OperateurContext,0)


        def getRuleIndex(self):
            return nekoScriptParser.RULE_operation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperation" ):
                listener.enterOperation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperation" ):
                listener.exitOperation(self)




    def operation(self):

        localctx = nekoScriptParser.OperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_operation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(nekoScriptParser.IDENTIFIANT)
            self.state = 62
            self.match(nekoScriptParser.T__0)
            self.state = 63
            self.valeur()
            self.state = 64
            self.operateur()
            self.state = 65
            self.valeur()
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 66
                self.match(nekoScriptParser.T__3)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AppelFonctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIANT(self):
            return self.getToken(nekoScriptParser.IDENTIFIANT, 0)

        def valeur(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nekoScriptParser.ValeurContext)
            else:
                return self.getTypedRuleContext(nekoScriptParser.ValeurContext,i)


        def getRuleIndex(self):
            return nekoScriptParser.RULE_appelFonction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAppelFonction" ):
                listener.enterAppelFonction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAppelFonction" ):
                listener.exitAppelFonction(self)




    def appelFonction(self):

        localctx = nekoScriptParser.AppelFonctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_appelFonction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(nekoScriptParser.T__4)
            self.state = 70
            self.match(nekoScriptParser.IDENTIFIANT)
            self.state = 71
            self.match(nekoScriptParser.T__1)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 30064771072) != 0):
                self.state = 72
                self.valeur()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 73
                    self.match(nekoScriptParser.T__5)
                    self.state = 74
                    self.valeur()
                    self.state = 79
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 82
            self.match(nekoScriptParser.T__2)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 83
                self.match(nekoScriptParser.T__3)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(nekoScriptParser.STRING, 0)

        def getRuleIndex(self):
            return nekoScriptParser.RULE_importation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportation" ):
                listener.enterImportation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportation" ):
                listener.exitImportation(self)




    def importation(self):

        localctx = nekoScriptParser.ImportationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_importation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(nekoScriptParser.T__6)
            self.state = 87
            self.match(nekoScriptParser.T__1)
            self.state = 88
            self.match(nekoScriptParser.STRING)
            self.state = 89
            self.match(nekoScriptParser.T__2)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 90
                self.match(nekoScriptParser.T__3)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlocSiteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def contenuSite(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nekoScriptParser.ContenuSiteContext)
            else:
                return self.getTypedRuleContext(nekoScriptParser.ContenuSiteContext,i)


        def getRuleIndex(self):
            return nekoScriptParser.RULE_blocSite

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlocSite" ):
                listener.enterBlocSite(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlocSite" ):
                listener.exitBlocSite(self)




    def blocSite(self):

        localctx = nekoScriptParser.BlocSiteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_blocSite)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(nekoScriptParser.T__7)
            self.state = 94
            self.match(nekoScriptParser.T__5)
            self.state = 95
            self.match(nekoScriptParser.T__8)
            self.state = 96
            self.match(nekoScriptParser.T__9)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 250368) != 0):
                self.state = 97
                self.contenuSite()
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 103
            self.match(nekoScriptParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContenuSiteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(nekoScriptParser.STRING, 0)

        def styleInstruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nekoScriptParser.StyleInstructionContext)
            else:
                return self.getTypedRuleContext(nekoScriptParser.StyleInstructionContext,i)


        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nekoScriptParser.InstructionContext)
            else:
                return self.getTypedRuleContext(nekoScriptParser.InstructionContext,i)


        def getRuleIndex(self):
            return nekoScriptParser.RULE_contenuSite

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContenuSite" ):
                listener.enterContenuSite(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContenuSite" ):
                listener.exitContenuSite(self)




    def contenuSite(self):

        localctx = nekoScriptParser.ContenuSiteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_contenuSite)
        self._la = 0 # Token type
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.match(nekoScriptParser.T__11)
                self.state = 106
                self.match(nekoScriptParser.T__12)
                self.state = 107
                self.match(nekoScriptParser.T__1)
                self.state = 108
                self.match(nekoScriptParser.STRING)
                self.state = 109
                self.match(nekoScriptParser.T__2)
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==4:
                    self.state = 110
                    self.match(nekoScriptParser.T__3)


                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.match(nekoScriptParser.T__13)
                self.state = 114
                self.match(nekoScriptParser.T__12)
                self.state = 115
                self.match(nekoScriptParser.STRING)
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==4:
                    self.state = 116
                    self.match(nekoScriptParser.T__3)


                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 3)
                self.state = 119
                self.match(nekoScriptParser.T__14)
                self.state = 120
                self.match(nekoScriptParser.T__12)
                self.state = 121
                self.match(nekoScriptParser.STRING)
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==4:
                    self.state = 122
                    self.match(nekoScriptParser.T__3)


                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 4)
                self.state = 125
                self.match(nekoScriptParser.T__15)
                self.state = 126
                self.match(nekoScriptParser.T__12)
                self.state = 127
                self.match(nekoScriptParser.STRING)
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==4:
                    self.state = 128
                    self.match(nekoScriptParser.T__3)


                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 5)
                self.state = 131
                self.match(nekoScriptParser.T__16)
                self.state = 132
                self.match(nekoScriptParser.T__9)
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==5:
                    self.state = 133
                    self.styleInstruction()
                    self.state = 138
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 139
                self.match(nekoScriptParser.T__10)
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 6)
                self.state = 140
                self.match(nekoScriptParser.T__8)
                self.state = 141
                self.match(nekoScriptParser.T__9)
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 38858391968) != 0):
                    self.state = 142
                    self.instruction()
                    self.state = 147
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 148
                self.match(nekoScriptParser.T__10)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StyleInstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIANT(self):
            return self.getToken(nekoScriptParser.IDENTIFIANT, 0)

        def STRING(self):
            return self.getToken(nekoScriptParser.STRING, 0)

        def getRuleIndex(self):
            return nekoScriptParser.RULE_styleInstruction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStyleInstruction" ):
                listener.enterStyleInstruction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStyleInstruction" ):
                listener.exitStyleInstruction(self)




    def styleInstruction(self):

        localctx = nekoScriptParser.StyleInstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_styleInstruction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(nekoScriptParser.T__4)
            self.state = 152
            self.match(nekoScriptParser.IDENTIFIANT)
            self.state = 153
            self.match(nekoScriptParser.T__12)
            self.state = 154
            self.match(nekoScriptParser.STRING)
            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 155
                self.match(nekoScriptParser.T__3)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PackageDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIANT(self):
            return self.getToken(nekoScriptParser.IDENTIFIANT, 0)

        def packageInstruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nekoScriptParser.PackageInstructionContext)
            else:
                return self.getTypedRuleContext(nekoScriptParser.PackageInstructionContext,i)


        def getRuleIndex(self):
            return nekoScriptParser.RULE_packageDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackageDeclaration" ):
                listener.enterPackageDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackageDeclaration" ):
                listener.exitPackageDeclaration(self)




    def packageDeclaration(self):

        localctx = nekoScriptParser.PackageDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_packageDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(nekoScriptParser.T__17)
            self.state = 159
            self.match(nekoScriptParser.IDENTIFIANT)
            self.state = 160
            self.match(nekoScriptParser.T__9)
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==19 or _la==20:
                self.state = 161
                self.packageInstruction()
                self.state = 166
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 167
            self.match(nekoScriptParser.T__10)
            self.state = 168
            self.match(nekoScriptParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PackageInstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(nekoScriptParser.STRING, 0)

        def IDENTIFIANT(self):
            return self.getToken(nekoScriptParser.IDENTIFIANT, 0)

        def paramList(self):
            return self.getTypedRuleContext(nekoScriptParser.ParamListContext,0)


        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nekoScriptParser.InstructionContext)
            else:
                return self.getTypedRuleContext(nekoScriptParser.InstructionContext,i)


        def getRuleIndex(self):
            return nekoScriptParser.RULE_packageInstruction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackageInstruction" ):
                listener.enterPackageInstruction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackageInstruction" ):
                listener.exitPackageInstruction(self)




    def packageInstruction(self):

        localctx = nekoScriptParser.PackageInstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_packageInstruction)
        self._la = 0 # Token type
        try:
            self.state = 191
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19]:
                self.enterOuterAlt(localctx, 1)
                self.state = 170
                self.match(nekoScriptParser.T__18)
                self.state = 171
                self.match(nekoScriptParser.T__12)
                self.state = 172
                self.match(nekoScriptParser.STRING)
                self.state = 174
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==4:
                    self.state = 173
                    self.match(nekoScriptParser.T__3)


                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 2)
                self.state = 176
                self.match(nekoScriptParser.T__19)
                self.state = 177
                self.match(nekoScriptParser.IDENTIFIANT)
                self.state = 178
                self.match(nekoScriptParser.T__1)
                self.state = 180
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==32:
                    self.state = 179
                    self.paramList()


                self.state = 182
                self.match(nekoScriptParser.T__2)
                self.state = 183
                self.match(nekoScriptParser.T__9)
                self.state = 187
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 38858391968) != 0):
                    self.state = 184
                    self.instruction()
                    self.state = 189
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 190
                self.match(nekoScriptParser.T__10)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIANT(self, i:int=None):
            if i is None:
                return self.getTokens(nekoScriptParser.IDENTIFIANT)
            else:
                return self.getToken(nekoScriptParser.IDENTIFIANT, i)

        def getRuleIndex(self):
            return nekoScriptParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)




    def paramList(self):

        localctx = nekoScriptParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 193
            self.match(nekoScriptParser.IDENTIFIANT)
            self.state = 198
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 194
                self.match(nekoScriptParser.T__5)
                self.state = 195
                self.match(nekoScriptParser.IDENTIFIANT)
                self.state = 200
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TerminalCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(nekoScriptParser.STRING, 0)

        def getRuleIndex(self):
            return nekoScriptParser.RULE_terminalCommand

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerminalCommand" ):
                listener.enterTerminalCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerminalCommand" ):
                listener.exitTerminalCommand(self)




    def terminalCommand(self):

        localctx = nekoScriptParser.TerminalCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_terminalCommand)
        try:
            self.state = 216
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,23,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 201
                self.match(nekoScriptParser.T__20)
                self.state = 202
                self.match(nekoScriptParser.T__21)
                self.state = 203
                self.match(nekoScriptParser.T__22)
                self.state = 204
                self.match(nekoScriptParser.STRING)
                self.state = 205
                self.match(nekoScriptParser.T__3)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 206
                self.match(nekoScriptParser.T__20)
                self.state = 207
                self.match(nekoScriptParser.T__21)
                self.state = 208
                self.match(nekoScriptParser.T__23)
                self.state = 209
                self.match(nekoScriptParser.STRING)
                self.state = 210
                self.match(nekoScriptParser.T__3)
                pass
